--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,7 @@
             width: 100%;
             background-color: gray;
             display: flex;
+            flex-direction: column;
         }
         
         .child1{
