--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@
         .nav{
             height: 40px;
             width: 100%;
-            background-color: green;
+            background-color: goldenrod;
             float: right;
             color: white;
         }
