--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,8 +194,8 @@
          .footer{
             height: 15vh;
             width: 100%;
-            background-color: gray;
-            color: black;
+            background-color: black;
+            color: goldenrod;
             
          }
         
