--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@
  }
 
  button:hover{
-    background-color:green;
+    background-color:goldenrod;
     border: black;
     transform: scaley(1.5);
  }
