--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@
  } 
  
  button{
-    background-color: gray;
+    background-color: yellow;
     padding: 10px 30px;
     margin: 20px 10px;
     border: 1px solid white;
